--- a/templates/admin/resources/subtree.html.twig
+++ b/templates/admin/resources/subtree.html.twig
@@ -1,6 +1,6 @@
 <ul>
     {% for resource in resources %}
-        <li>{{ resource.name }}
+        <li> {% include 'admin/resources/resource_item.html.twig' with {'resources': resource } %}
             {% if resource.children is defined %}
                 {% include 'admin/resources/subtree.html.twig' with {'resources': resource.children, 'parentId':resource.id} %}
             {% endif %}
