--- a/templates/landing/index.html.twig
+++ b/templates/landing/index.html.twig
@@ -13,28 +13,28 @@
     {% include 'landing/part/about.html.twig' %}
     <!-- About Section End -->
 
+    <!-- facts Section Start -->
+    {% include 'landing/part/facts.html.twig' %}
+    <!-- facts Section End -->
     <!-- Services Section Start -->
     {% include 'landing/part/services.html.twig' %}
     <!-- Services Section End -->
 
     <!-- Portfolio Section -->
-    {% include 'landing/part/portfolio.html.twig' %}
+{#    {% include 'landing/part/portfolio.html.twig' %}#}
     <!-- Portfolio Section Ends -->
 
     <!-- Feature Section Start -->
-    {% include 'landing/part/feature.html.twig' %}
+  {#  {% include 'landing/part/feature.html.twig' %}#}
     <!-- Feature Section End -->
 
-    <!-- facts Section Start -->
-    {% include 'landing/part/facts.html.twig' %}
-    <!-- facts Section End -->
 
     <!-- Team Section Start -->
-    {% include 'landing/part/team.html.twig' %}
+{#    {% include 'landing/part/team.html.twig' %}#}
     <!-- Team Section End -->
 
     <!-- Pricing section Start -->
-    {% include 'landing/part/pricing.html.twig' %}
+{#    {% include 'landing/part/pricing.html.twig' %}#}
     <!-- Pricing Table Section End -->
 
     <!-- Single testimonial Start -->
