--- a/templates/admin/resources/list.html.twig
+++ b/templates/admin/resources/list.html.twig
@@ -1,18 +1,30 @@
 {% extends '@SonataAdmin/standard_layout.html.twig' %}
 
 {% block sonata_admin_content %}
-    Your content here vasd as da da
+    <h1>Resources</h1>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="box box-primary">
+                <div class="box-header">
+                    <h4 class="box-title"></h4>
+                    <a class="btn btn-success btn-sm sonata-ba-action" href="{{ path('admin_app_resources_create') }}">
+                        <i class="fa fa-plus"></i> Add
+                    </a>
+                </div>
+                <div class="box-body">
 
-    {{ dump(resources) }}
+                    <ul>
+                        {% for resource in resources %}
 
-    <ul>
-        {% for resource in resources %}
-
-            <li> {% include 'admin/resources/resource_item.html.twig' with {'resources': resource } %}
-                {% if resource.children is defined %}
-                {% include 'admin/resources/subtree.html.twig' with {'resources': resource.children, 'parentId':resource.id} %}
-                {% endif %}
-            </li>
-        {% endfor %}
-    </ul>
+                            <li> {% include 'admin/resources/resource_item.html.twig' with {'resources': resource } %}
+                                {% if resource.children is defined %}
+                                    {% include 'admin/resources/subtree.html.twig' with {'resources': resource.children, 'parentId':resource.id} %}
+                                {% endif %}
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
