--- a/templates/landing/part/about.html.twig
+++ b/templates/landing/part/about.html.twig
@@ -1,34 +1,7 @@
 <div id="about" class="section-padding">
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-6 col-xs-12">
-                <div class="about block text-center">
-                    <img src="/img/about/img1.png" alt="">
-                    <h5><a href="#">About Title</a></h5>
-                    <p>Quisque sit amet libero purus. Nulla a dignissim quam. In hac habitasse platea dictumst.</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-xs-12">
-                <div class="about block text-center">
-                    <img src="/img/about/img2.png" alt="">
-                    <h5><a href="#">About Title</a></h5>
-                    <p>Quisque sit amet libero purus. Nulla a dignissim quam. In hac habitasse platea dictumst.</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-xs-12">
-                <div class="about block text-center">
-                    <img src="/img/about/img3.png" alt="">
-                    <h5><a href="#">About Title</a></h5>
-                    <p>Quisque sit amet libero purus. Nulla a dignissim quam. In hac habitasse platea dictumst.</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-xs-12">
-                <div class="about block text-center">
-                    <img src="/img/about/img4.png" alt="">
-                    <h5><a href="#">About Title</a></h5>
-                    <p>Quisque sit amet libero purus. Nulla a dignissim quam. In hac habitasse platea dictumst.</p>
-                </div>
-            </div>
+            {{ list_view.view({'parent':15,'template':'home/about_block'}) }}
         </div>
     </div>
 </div>
